@@ -19,7 +19,7 @@
 
     <repositories>
         <repository>
-            <id>github-beast3</id>
+            <id>github</id>
             <url>https://maven.pkg.github.com/alexeid/beast3modular</url>
         </repository>
     </repositories>
@@ -78,6 +78,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
+                    <argLine>
+                        --add-reads my.beast.pkg=ALL-UNNAMED
+                        --add-reads beast.base=ALL-UNNAMED
+                        --add-reads beast.pkgmgmt=ALL-UNNAMED
+                    </argLine>
                     <systemPropertyVariables>
                         <BEAST_PACKAGE_PATH>${project.build.outputDirectory}</BEAST_PACKAGE_PATH>
                     </systemPropertyVariables>
@@ -92,7 +97,7 @@
                 <executions>
                     <execution>
                         <id>copy-version-xml</id>
-                        <phase>generate-test-resources</phase>
+                        <phase>generate-resources</phase>
                         <goals><goal>copy-resources</goal></goals>
                         <configuration>
                             <outputDirectory>${project.build.directory}</outputDirectory>
